@startuml Weather
hide empty members

' 天気
abstract class Weather {
    - time : Calendar
    - temperature : double
    - windSpeed : double
    - chanceOfRain : double
}

class Sunny {
}
class Cloudy {
}
class Rain {
    - precipitation : double
}


Weather <|-- Sunny
Weather <|-- Cloudy
Weather <|-- Rain


@enduml